# css_inline

./: .gitignore  .tool-versions  LICENSE  README.md  checksum-Elixir.CSSInline.Native.exs  mix.exs
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
lib/: css_inline.ex
lib/css_inline/: native.ex
native/css_inline_nif/: Cargo.toml
native/css_inline_nif/src/: lib.rs
test/: css_inline_test.exs
test/fixtures/: deeply_nested.html
