[package]
name = "css_inline_nif"
version = "0.1.2"
edition = "2021"
authors = ["Knock Labs"]
publish = false

[lib]
name = "css_inline_nif"
crate-type = ["cdylib"]

[features]
default = []
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]

[dependencies]
rustler = "0.37"
css-inline = "0.19.1"
